--- a/tml-airflow/dashboard/dashboard.html
+++ b/tml-airflow/dashboard/dashboard.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--
+
 <head>
     <meta charset="UTF-8" />
-	<link rel="shortcut icon" type="image/x-icon" href="./oticsico.png" />
+	<link rel="shortcut icon" type="image/x-icon" href="/oticsico.png" />
     <title>IoT Device Failure Surveillance Dashboard</title>                             <!-- CHANGE TITLE HERE -->
 
 <!-- ************************************** START OF STYLE *************************************  -->    
