--- a/tml-airflow/dashboard/iot-failure-seneca.html
+++ b/tml-airflow/dashboard/iot-failure-seneca.html
@@ -10,7 +10,7 @@ Website: http://www.otics.ca
 =========================================-->
 <head>
     <meta charset="UTF-8" />
-	   <link rel="shortcut icon" type="image/x-icon" href="./oticsico.png" />
+	   <link rel="shortcut icon" type="image/x-icon" href="/oticsico.png" />
     <title>IoT Device Failure Surveillance Dashboard</title>
     <style>
 	.loader {
