--- a/tml-airflow/dashboard/dashboard.html
+++ b/tml-airflow/dashboard/dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
 	<link rel="shortcut icon" type="image/x-icon" href="/oticsico.png" />
-    <title>IoT Device Failure Surveillance Dashboard</title>                             <!-- CHANGE TITLE HERE -->
+    <title>IoT Processing Dashboard</title>                             <!-- CHANGE TITLE HERE -->
 
 <!-- ************************************** START OF STYLE *************************************  -->    
   <style>
