--- a/tml-airflow/dashboard/tml-cisco-network-monitor.html
+++ b/tml-airflow/dashboard/tml-cisco-network-monitor.html
@@ -5,6 +5,7 @@
 Developed by: Sebastian Maurice, PhD
 =========================================-->
 <head>
+<base target="/" />    
 <meta charset="UTF-8" />
 <link rel="shortcut icon" type="image/x-icon" href="./oticsico.png" />
 <title>Real-Time Cyber Threats and Network Monitoring Dashboard</title>
@@ -107,11 +108,11 @@ padding: 4px 5px 2px 2px;
 }
 
 </style>
-<script type="text/javascript" src="/js/attention.js"></script>   
+<script type="text/javascript" src="./js/attention.js"></script>   
 
-<script type="text/javascript" src="/js/r.min.js"></script>   
-<script type="text/javascript" src="/js/justgage.js"></script>   
-<script type="text/javascript" src="/js/justgage.min.js"></script>   
+<script type="text/javascript" src="./js/r.min.js"></script>   
+<script type="text/javascript" src="./js/justgage.js"></script>   
+<script type="text/javascript" src="./js/justgage.min.js"></script>   
 
 <script>
   window.Promise ||
@@ -127,23 +128,23 @@ padding: 4px 5px 2px 2px;
 	  '<script src="https://cdn.jsdelivr.net/npm/findindex_polyfill_mdn"><\/script>'
 	)
 </script>
-<script src="/js/d3.min.js"></script>
-<script src="/js/d3pie.js"></script>
+<script src="./js/d3.min.js"></script>
+<script src="./js/d3pie.js"></script>
 
     
 <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
-<link rel="stylesheet" href="/leaflet/leaflet.css" />
+<link rel="stylesheet" href="./leaflet/leaflet.css" />
 
 </head>
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link href="/css/tilescrypto.css" rel="stylesheet">
-<link href="/css/attention.css" rel="stylesheet">
-<link href="/css/button.css" rel="stylesheet">
-<link href="/css/textbox.css" rel="stylesheet">
-<link href="/css/table3d.css" rel="stylesheet">
-<link href="/css/dropdown.css" rel="stylesheet">
-<link href="/css/component-custom-switch.css" rel="stylesheet">
+<link href="./css/tilescrypto.css" rel="stylesheet">
+<link href="./css/attention.css" rel="stylesheet">
+<link href="./css/button.css" rel="stylesheet">
+<link href="./css/textbox.css" rel="stylesheet">
+<link href="./css/table3d.css" rel="stylesheet">
+<link href="./css/dropdown.css" rel="stylesheet">
+<link href="./css/component-custom-switch.css" rel="stylesheet">
 
 <body>
 <!-- <center><img src='./senecalogo.png' width=150 height=70> | <img src='./OTICS-New-Logo-Black.png' width=150 height=70></center> -->
@@ -1424,12 +1425,24 @@ function streamLiveKafkaData() {
 			}
 		}
 
-		///////////////////////////////////////////////////////////////////////  CREATE WEBSOCKET OBJECT ///////////////////
-		if (window.location.href.indexOf("http://") != -1) {
-			ws = new WebSocket("ws://" + url + "/ws");
-		} else {
-			ws = new WebSocket("wss://" + url + "/ws");
-		}
+ <!-- ************************************* CREATE WEBSOCKET OBJECT **************************** -->
+            if (window.location.href.indexOf("http://")!=-1){
+		     if (window.location.href.indexOf("/viz/")!=-1){
+                ws = new WebSocket("ws://"+url+"/viz/ws");
+             }else{
+                  ws = new WebSocket("ws://"+url+"/ws");
+             } 
+        }else{
+             if (window.location.href.indexOf("/viz/")!=-1){                                                                            
+                 ws = new WebSocket("wss://"+url+"/viz/ws");
+             }else{
+               ws = new WebSocket("wss://"+url+"/ws");
+             }
+           }
+
+
+ <!-- ************************************* CREATE WEBSOCKET OBJECT **************************** -->
+		
 		ws.onmessage = function (event) {
 			curTime = new Date();
 			var eventdata = `${event.data}`;
