--- a/tml-airflow/dashboard/dashboard.html
+++ b/tml-airflow/dashboard/dashboard.html
@@ -180,7 +180,8 @@ function image(thetype,mess) {
 
 <!-- ******************************************************* START WEBSITE BODY  ******************************************* -->
 
-<body>
+<body style="overflow-x: auto">
+
 <!-- ********************************************************* DASHBOARD HEADER ******************************************** -->
 <table style="width: 100%;height: 80px;    background: linear-gradient(135deg,  rgba(102, 255, 217,1) 0%,rgba(0, 128, 255,1) 50%,rgba(0, 128, 255,1) 51%,rgba(0, 255, 128,1) 100%);">
 <tr>
