--- a/tml-airflow/dashboard/iot-failure-machinelearning.html
+++ b/tml-airflow/dashboard/iot-failure-machinelearning.html
@@ -200,7 +200,8 @@ function image(thetype,mess) {
         height: 500px;
       }
 </style>
-<body>
+<body style="overflow-x: auto">
+
 <center><a href='http://www.otics.ca/' target=new><img src='./OTICS-New-Logo-Black.png' width=150 height=70></a></center>
 <table style="width: 100%;height: 80px;    background: linear-gradient(135deg,  rgba(102, 255, 217,1) 0%,rgba(0, 128, 255,1) 50%,rgba(0, 128, 255,1) 51%,rgba(0, 255, 128,1) 100%);">
 <tr>
