--- a/tml-airflow/dashboard/iot-failure-machinelearning-uoft.html
+++ b/tml-airflow/dashboard/iot-failure-machinelearning-uoft.html
@@ -200,7 +200,8 @@ function image(thetype,mess) {
         height: 500px;
       }
 </style>
-<body>
+<body style="overflow-x: auto">
+
 <!-- <center><a href='http://www.otics.ca/' target=new><img src='/OTICS-New-Logo-Black.png' width=150 height=70></a></center> -->
 <center><a href='https://learn.utoronto.ca/' target=new><img src='./img/uoftscs.png' width=411 height=95></a></center>
 
