--- a/tml-airflow/dashboard/tml-cisco-network-privategpt-monitor.html
+++ b/tml-airflow/dashboard/tml-cisco-network-privategpt-monitor.html
@@ -168,7 +168,8 @@ padding: 4px 5px 2px 2px;
 <link href="./css/dropdown.css" rel="stylesheet">
 <link href="./css/component-custom-switch.css" rel="stylesheet">
 
-<body>
+<body style="overflow-x: auto">
+
 <!-- <center><img src='./senecalogo.png' width=150 height=70> | <img src='./OTICS-New-Logo-Black.png' width=150 height=70></center> -->
 <center><img src='./OTICS-New-Logo-Black.png' width=150 height=70></center> 
 
